Ingress/apa2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver2
  labels:
    app: apa2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apa2
  template:
    metadata:
      labels:
        app: apa2
    spec:
      containers:
      - name: apa2
        image: atcomp/apachetest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webpage
          mountPath: /var/www/html
          readOnly: True
      volumes:
      - name: webpage
        configMap:
          name: htmltext2
