Ingress/apa1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice1
  labels:
    app: apa1
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: apa1
