Ingress/apa2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice2
  labels:
    app: apa2
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: apa2
